	PR rtl-optimization/29841 	* cfgbuild.c (control_flow_insn_p): Return TRUE for unconditional 	trap instructions. 	* sched-deps.c (sched_analyze_insn): Prevent all non-jump instructions 	that may cause control flow transfer from being moved.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@123970 138bc75d-0d04-0410-961f-82ee72b054a4